tests/test_programs/errors/const_reassign.cm
// const変数への再代入エラーテスト
import std::io::println;

int main() {
    const int VALUE = 42;
    VALUE = 100;
    // エラー: const変数への再代入
    return 0;
}
